fixed the hover on mobile to go after sound played

--- a/style.css
+++ b/style.css
@@ -88,7 +88,11 @@ h1 {
   position: relative;
 }
 
-.image:hover {
+/* .image:hover {
+  transform: scale(1.05, 1.05);
+} */
+
+.image-sound-hover {
   transform: scale(1.05, 1.05);
 }
 
